--- a/index.html
+++ b/index.html
@@ -764,9 +764,6 @@
                     <h3>💌 Have Questions or Feedback?</h3>
                     <p>I'd love to hear from you! Reach out to me with any thoughts, suggestions, or bug reports.</p>
                     <div class="contact-links">
-                        <a href="mailto:nitheesh.k2024@vitstudent.ac.in" class="code-font">
-                            📧 nitheesh.k2024@vitstudent.ac.in
-                        </a>
                         <a href="https://www.linkedin.com/in/10000aura/" target="_blank">
                             💼 LinkedIn
                         </a>
@@ -789,7 +786,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 CopyCat. Made with ❤️ by Nitheesh K. at VIT, Chennai.</p>
+            <p>&copy; 2025 CopyCat. Made with ❤️ by Nitheesh K. at Chennai, India</p>
         </div>
     </footer>
 
